--- a/app/globals.css
+++ b/app/globals.css
@@ -37,6 +37,7 @@
   --color-popover: var(--popover);
   --color-card-foreground: var(--card-foreground);
   --color-card: var(--card);
+  --color-btn-outlined: var(--btn-outlined);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -49,6 +50,7 @@
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
+  --btn-outlined: oklch(1 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
   --primary: oklch(0.205 0 0);
@@ -81,8 +83,9 @@
 .dark {
   --background: oklch(0.1288 0.0254 260.23);
   --foreground: oklch(0.985 0 0);
-  --card: oklch(0.1288 0.0254 260.23);
+  --card: oklch(0.2046 0 0);
   --card-foreground: oklch(0.985 0 0);
+  --btn-outlined: oklch(0.1149 0.023 259.21);
   --popover: oklch(0.205 0 0);
   --popover-foreground: oklch(0.985 0 0);
   --primary: oklch(0.922 0 0);
@@ -117,6 +120,7 @@
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.2042 0.0395 267.53);
   --card-foreground: oklch(0.985 0 0);
+  --btn-outlined: oklch(0.1897 0.0364 266.07);
   --popover: oklch(0.205 0 0);
   --popover-foreground: oklch(0.985 0 0);
   --primary: oklch(0.922 0 0);
