--- a/app/globals.css
+++ b/app/globals.css
@@ -64,7 +64,7 @@
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
+  --ring: oklch(75.966% 0.0034 15.833);
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
   --chart-3: oklch(0.398 0.07 227.392);
@@ -78,6 +78,11 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --progress-foreground: oklch(9.414% 0.02562 23.372 / 0.753);
+  --progress-background: var(--ring);
+  --keross-skeleton-bg: oklch(44.967% 0.00521 16.812 / 0.589);
+  --hover-back: var(--muted-foreground);
+  --calender-foreground: oklch(47.397% 0.00384 16.522);
 }
 
 .dark {
@@ -101,7 +106,7 @@
   --border: oklch(1 0 0 / 10%);
   --input: oklch(1 0 0 / 15%);
   --ring: oklch(0.556 0 0);
-  --chart-1: oklch(0.488 0.243 264.376);
+  --chart-1: #151515;
   --chart-2: oklch(0.696 0.17 162.48);
   --chart-3: oklch(0.769 0.188 70.08);
   --chart-4: oklch(0.627 0.265 303.9);
@@ -119,6 +124,7 @@
   --progress-background: oklch(0.25 0 0);
   --keross-skeleton-bg: var(--accent);
   --hover-back: #171717;
+   --contrast-color: oklch(12.382% 0.00233 17.142);
 }
 
 .keross {
@@ -128,7 +134,6 @@
   --card-foreground: oklch(0.985 0 0);
   --btn-outlined: oklch(0.1897 0.0364 266.07);
    --popover: oklch(0.1915 0.0416 266.02);
- 
   --popover-foreground: oklch(0.985 0 0);
   --primary: oklch(0.922 0 0);
   --primary-foreground: oklch(0.205 0 0);
@@ -157,10 +162,11 @@
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
   --keross-checkbox-bg: var(--foreground); 
-;--keross-skeleton-bg: oklch(1 0 0 / 15%);
+--keross-skeleton-bg: oklch(1 0 0 / 15%);
 --progress-foreground: oklch(1 0 0 / 20%);
 --progress-background: oklch(0.1882 0.0527 266.38);
 --hover-back: oklch(0.2505 0.0528 266.07);
+ --contrast-color: oklch(92.502% 0.00431 15.893);
 
 }
 
