--- a/components/registry/new-york/globals.css
+++ b/components/registry/new-york/globals.css
@@ -86,7 +86,7 @@
 }
 
 .dark {
-  --background: oklch(0.1288 0.0254 260.23);
+  --background:#050505;
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.2046 0 0);
   --card-foreground: oklch(0.985 0 0);
@@ -102,7 +102,8 @@
   --accent: oklch(0.269 0 0);
   --accent-foreground: oklch(0.985 0 0);
   --calender-foreground: oklch(98.511% 0.00011 271.152);
-  --destructive: oklch(0.704 0.191 22.216);
+  --destructive: #F43F5E;
+
   --border: oklch(1 0 0 / 10%);
   --input: oklch(1 0 0 / 15%);
   --ring: oklch(0.556 0 0);
@@ -125,6 +126,8 @@
   --keross-skeleton-bg: var(--accent);
   --hover-back: #171717;
    --contrast-color: oklch(12.382% 0.00233 17.142);
+  --btn-secondary: #151515;
+;
 }
 
 .keross {
@@ -144,7 +147,7 @@
   --accent: oklch(0.269 0 0);
   --accent-foreground:oklch(0.117 0.045 267.4);
   --calender-foreground: #1F3ABA;
-  --destructive: oklch(43.373% 0.07383 213.199);
+  --destructive: #F43F5E;
   --border: oklch(1 0 0 / 10%);
   --input: oklch(1 0 0 / 15%);
   --ring:#0C1324;
@@ -167,6 +170,9 @@
 --progress-background: oklch(0.1882 0.0527 266.38);
 --hover-back: oklch(0.2505 0.0528 266.07);
  --contrast-color: oklch(92.502% 0.00431 15.893);
+ --btn-secondary:#00000033;
+;
+
 
 }
 
