--- a/components/registry/new-york/globals.css
+++ b/components/registry/new-york/globals.css
@@ -82,7 +82,11 @@
   --progress-background: var(--ring);
   --keross-skeleton-bg: oklch(44.967% 0.00521 16.812 / 0.589);
   --hover-back: var(--muted-foreground);
-  --calender-foreground: oklch(47.397% 0.00384 16.522);
+  --calender-foreground: oklch(12.382% 0.00233 17.142);
+  --contrast-color: oklch(12.382% 0.00233 17.142);
+   --btn-secondary:#00000007;
+   --btn-default:oklch(0.985 0 0);
+
 }
 
 .dark {
@@ -127,6 +131,7 @@
   --hover-back: #171717;
    --contrast-color: oklch(12.382% 0.00233 17.142);
   --btn-secondary: #151515;
+  --btn-default:#151515;
 ;
 }
 
@@ -171,6 +176,7 @@
 --hover-back: oklch(0.2505 0.0528 266.07);
  --contrast-color: oklch(92.502% 0.00431 15.893);
  --btn-secondary:#00000033;
+  --btn-default:oklch(0.985 0 0);
 ;
 
 
